[gd_scene load_steps=6 format=3 uid="uid://cxae2nu1rsyeo"]

[ext_resource type="Script" path="res://dialog/scene/visual_novel_balloon.gd" id="1_hmg33"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_rtuym"]
[ext_resource type="Script" path="res://dialog/scene/SkillCheckResponseTemplate.gd" id="3_4ho1s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sr5y7"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ma11q"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.301961, 0.301961, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="VisualNovelBalloon" type="CanvasLayer"]
process_mode = 1
script = ExtResource("1_hmg33")
metadata/_edit_vertical_guides_ = [960.0]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 5
stretch_mode = 5

[node name="Slots" type="Node2D" parent="."]

[node name="Slot0" type="Marker2D" parent="Slots"]
position = Vector2(396, 1079)

[node name="Slot1" type="Marker2D" parent="Slots"]
position = Vector2(1512, 1080)

[node name="Slot2" type="Marker2D" parent="Slots"]
position = Vector2(95, 1080)

[node name="Slot3" type="Marker2D" parent="Slots"]
position = Vector2(961, 1077)

[node name="Slot4" type="Marker2D" parent="Slots"]
position = Vector2(1807, 1077)

[node name="Balloon" type="Control" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0588235, 0.105882, 0.129412, 1)

[node name="Margin" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="DialogueLabel" parent="Balloon/Margin" instance=ExtResource("2_rtuym")]
layout_mode = 2
fit_content = false
scroll_active = true
scroll_following = true

[node name="Responses" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.645
anchor_top = 0.653
anchor_right = 0.978
anchor_bottom = 0.653
offset_left = -322.4
offset_top = -60.24
offset_right = -871.76
offset_bottom = -8.23999
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ResponseTemplate" type="RichTextLabel" parent="."]
offset_left = 48.0
offset_top = 694.0
offset_right = 246.0
offset_bottom = 740.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_sr5y7")
theme_override_styles/normal = SubResource("StyleBoxFlat_ma11q")
bbcode_enabled = true
text = "Response template"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
script = ExtResource("3_4ho1s")

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
